feat: Run HTTP server with generating openapi file
